[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Fonts/LevelSelectionFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://MissionScene/CrewSelection.gd" type="Script" id=2]

[node name="CrewSelection" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationScreen" type="Control" parent="."]
margin_right = 628.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="Return" type="Button" parent="ConfirmationScreen"]
margin_left = 16.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 80.0
text = "return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmationScreen"]
margin_right = 624.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 1 )
text = "please select 3 crewmates 
to send on this mission"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMission" type="Button" parent="ConfirmationScreen"]
visible = false
margin_left = 136.0
margin_top = 288.0
margin_right = 247.0
margin_bottom = 308.0
rect_scale = Vector2( 3, 3 )
text = "START MISSION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrewBox" type="ScrollContainer" parent="."]
margin_left = 632.0
margin_right = 1261.0
margin_bottom = 720.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="CrewBox"]
margin_right = 617.0
margin_bottom = 1000.0
rect_min_size = Vector2( 0, 1000 )
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 1

[node name="EmptySpace" type="Control" parent="CrewBox/VBoxContainer"]
margin_right = 617.0
margin_bottom = 1000.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.58

[node name="Control" type="Control" parent="."]
margin_left = 1265.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 15, 0 )

[connection signal="pressed" from="ConfirmationScreen/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="ConfirmationScreen/StartMission" to="." method="_on_StartMission_pressed"]
